Fix cross-browser alignment of completion indicator (closes #462)

--- a/app/assets/stylesheets/training_modules/_cards.styl
+++ b/app/assets/stylesheets/training_modules/_cards.styl
@@ -40,6 +40,9 @@
   width 89%
   font-size 18px
   @extends .truncated-text
+.action-card-title__completion
+  position absolute
+  right 69px
 .action-card-text
   font-size 16px
   font-weight 400
